# echidna

.github/workflows/: ci.yml  release.yml
android/app/app/src/main/kotlin/com/echidna/app/data/: ControlStateRepository.kt  PresetSerializer.kt
android/app/app/src/main/kotlin/com/echidna/app/ui/whitelist/: WhitelistEditorViewModel.kt
native/zygisk/: CMakeLists.txt
native/zygisk/src/: api.cpp  module.cpp
native/zygisk/src/hooks/: audio_hook_orchestrator.cpp  audioflinger_hook_manager.h
native/zygisk/src/runtime/: inline_hook.cpp  profile_sync_server.cpp
native/zygisk/src/state/: shared_state.cpp
native/zygisk/src/utils/: config_shared_memory.cpp  telemetry_shared_memory.cpp
tools/: build_magisk_module.sh
